<resources>
    <string name="app_name">Rick &amp; Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="characters">Characters</string>
    <string name="characterNameLabel">Name :</string>
    <string name="characterStatusLabel">Status :</string>
    <string name="characterSpeciesLabel">Species :</string>
    <string name="characterTypeLabel">Type :</string>
    <string name="characterGenderLabel">Gender :</string>
    <string name="OriginTabName">Name:</string>
    <string name="OriginTabUrl">Url:</string>
    <string name="unknown">Unknown</string>
    <string name="type">Type:</string>
    <string name="dimension">Dimension:</string>
    <string name="episode">Episode:</string>
    <string name="episodes">Episodes</string>
    <string name="locations">Locations</string>
    <string name="airdate">AirDate:</string>
    <string name="residents">Residents</string>
    <string name="rick_and_morty">Rick and Morty</string>
</resources>